[gd_scene load_steps=16 format=3 uid="uid://b8ki845joqcnh"]

[ext_resource type="Script" path="res://level.gd" id="1_d8efn"]
[ext_resource type="Texture2D" uid="uid://dccvgy7grvwon" path="res://ui/star_regular.svg" id="2_dlmkr"]
[ext_resource type="Texture2D" uid="uid://q28cdfoueli8" path="res://ui/star_solid.svg" id="3_fqcxr"]
[ext_resource type="Script" path="res://droppable_background.gd" id="4_21gbo"]
[ext_resource type="Texture2D" uid="uid://dgyy8ryhn84k6" path="res://dog_level/dog.png" id="5_6p3aa"]
[ext_resource type="PackedScene" uid="uid://gpvwrquanwhj" path="res://ui/maximize_button/maximize_button.tscn" id="7_ywdc7"]
[ext_resource type="PackedScene" uid="uid://c4e4q5arhn8f2" path="res://ui/back_button/back_button.tscn" id="8_tbklm"]
[ext_resource type="PackedScene" uid="uid://c7v1migha7ig" path="res://ui/volume_button/volume_button.tscn" id="9_5id82"]
[ext_resource type="Texture2D" uid="uid://btvovgytwfq74" path="res://square_slot.svg" id="10_10lmo"]
[ext_resource type="Script" path="res://slot.gd" id="11_suqmt"]
[ext_resource type="Texture2D" uid="uid://bwvk2il82mqsk" path="res://square.svg" id="12_ib87x"]
[ext_resource type="Script" path="res://draggable_object.gd" id="13_6iceu"]
[ext_resource type="Script" path="res://draggable_label.gd" id="14_ni0bv"]
[ext_resource type="Theme" uid="uid://dih34ywnda3er" path="res://panel_button_theme.tres" id="15_tiibd"]
[ext_resource type="Script" path="res://ui/back_button/back_button.gd" id="16_y7wcw"]

[node name="DogLevel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_d8efn")
empty_star = ExtResource("2_dlmkr")
filled_star = ExtResource("3_fqcxr")
metadata/_edit_horizontal_guides_ = [121.0]

[node name="Background" type="CanvasLayer" parent="."]
layer = -2

[node name="ColorRect" type="ColorRect" parent="Background"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.894118, 0.87451, 0.854902, 1)
script = ExtResource("4_21gbo")

[node name="DogFigure" type="Sprite2D" parent="Background"]
position = Vector2(964, 533)
scale = Vector2(0.6, 0.6)
texture = ExtResource("5_6p3aa")

[node name="MaximizeButton" parent="Background" instance=ExtResource("7_ywdc7")]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -520.0
offset_right = 0.0
grow_horizontal = 0
pivot_offset = Vector2(500, 20)

[node name="BackButton" parent="Background" instance=ExtResource("8_tbklm")]
pivot_offset = Vector2(20, 20)

[node name="Score" type="RichTextLabel" parent="Background"]
unique_name_in_owner = true
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -187.5
offset_top = 100.0
offset_right = 187.5
offset_bottom = 188.0
grow_horizontal = 2
mouse_filter = 2
bbcode_enabled = true
text = "[b]Acertos:[/b] 0/1"

[node name="VolumeButton" parent="Background" instance=ExtResource("9_5id82")]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -520.0
offset_right = 0.0
grow_horizontal = 0
pivot_offset = Vector2(350, 20)

[node name="Slots" type="Node" parent="."]
unique_name_in_owner = true

[node name="SquareSlot" type="TextureRect" parent="Slots"]
z_index = -1
offset_left = 250.0
offset_top = 317.0
offset_right = 480.0
offset_bottom = 367.0
texture = ExtResource("10_10lmo")
expand_mode = 1
script = ExtResource("11_suqmt")
expected_value = "Veia Jugular"

[node name="SquareSlot2" type="TextureRect" parent="Slots"]
z_index = -1
offset_left = 1112.0
offset_top = 418.0
offset_right = 1283.0
offset_bottom = 589.0
texture = ExtResource("10_10lmo")
script = ExtResource("11_suqmt")
expected_value = "abacate"

[node name="Pieces" type="Node" parent="."]

[node name="Square" type="TextureRect" parent="Pieces"]
offset_left = 16.0
offset_top = 188.0
offset_right = 187.0
offset_bottom = 359.0
texture = ExtResource("12_ib87x")
script = ExtResource("13_6iceu")
value = "abacate"

[node name="VeiaJugular" type="Label" parent="Pieces"]
offset_left = 11.0
offset_top = 393.0
offset_right = 237.0
offset_bottom = 442.0
text = "Veia Jugular"
script = ExtResource("14_ni0bv")

[node name="VictoryPanel" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
z_index = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -300.0
offset_right = 300.0
offset_bottom = 350.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(300, 325)

[node name="MarginContainer" type="MarginContainer" parent="VictoryPanel"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VictoryPanel/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="VictoryPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "[center][b]Parabéns![/b][/center]"
fit_content = true

[node name="RichTextLabel2" type="RichTextLabel" parent="VictoryPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "[center]Você concluiu esse nível![/center]"
fit_content = true

[node name="Stars" type="HBoxContainer" parent="VictoryPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6

[node name="Star" type="TextureRect" parent="VictoryPanel/MarginContainer/VBoxContainer/Stars"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
texture = ExtResource("3_fqcxr")
expand_mode = 1
stretch_mode = 4

[node name="Star2" type="TextureRect" parent="VictoryPanel/MarginContainer/VBoxContainer/Stars"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
texture = ExtResource("3_fqcxr")
expand_mode = 1
stretch_mode = 4

[node name="Star3" type="TextureRect" parent="VictoryPanel/MarginContainer/VBoxContainer/Stars"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
texture = ExtResource("2_dlmkr")
expand_mode = 1
stretch_mode = 4

[node name="Buttons" type="VBoxContainer" parent="VictoryPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="FigureButton" type="Button" parent="VictoryPanel/MarginContainer/VBoxContainer/Buttons"]
layout_mode = 2
size_flags_vertical = 8
theme = ExtResource("15_tiibd")
text = "Ver figura"

[node name="ContinueButton" type="Button" parent="VictoryPanel/MarginContainer/VBoxContainer/Buttons"]
layout_mode = 2
size_flags_vertical = 8
theme = ExtResource("15_tiibd")
text = "Continuar"
script = ExtResource("16_y7wcw")

[connection signal="slot_filled" from="Slots/SquareSlot" to="." method="_on_slot_filled"]
[connection signal="slot_filled" from="Slots/SquareSlot2" to="." method="_on_slot_filled"]
[connection signal="pressed" from="VictoryPanel/MarginContainer/VBoxContainer/Buttons/FigureButton" to="." method="hide_victory_panel"]
[connection signal="pressed" from="VictoryPanel/MarginContainer/VBoxContainer/Buttons/ContinueButton" to="VictoryPanel/MarginContainer/VBoxContainer/Buttons/ContinueButton" method="_on_pressed"]
